# photon-wasm-patched-rs

./: Cargo.toml  WASM-PARALLEL-BUILD-GUIDE.md  WASM-PARALLEL-SUMMARY.md  build-wasm-parallel.sh  wasm-bindgen-rayon.md  wasm-parallel-usage-example.js
.cargo/: config.toml
photon-master/: COLOR_PICKER_API.md  Cargo.toml  HIGH_PRIORITY_OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  build.rs  test_optimizations.rs  wasm-parallel-usage.js  优化使用指南.md  并行化和WASM优化总结.md  库性能优化v2.md  库的性能优化-v3.md  库的性能优化.md
photon-master/.cargo/: config.toml
photon-master/crate/: Cargo.toml
photon-master/crate/examples/: bench_base64.rs  bench_dither.rs  bench_seam_carve.rs  bench_simd.rs  test_bilateral.rs  test_color_picker.rs  test_colour_space_optimization.rs  test_colour_space_simple.rs  test_noise_optimization.rs  test_optimizations.rs
photon-master/crate/fonts/: remain.txt
photon-master/crate/src/: adaptive.rs  channels.rs  colour_spaces.rs  conv.rs  effects.rs  filters.rs  helpers.rs  lib.rs  monochrome.rs  multiple.rs  noise.rs  parallel.rs  simd.rs  simd_conv.rs  text.rs  transform.rs  wasm_optimizations.rs
photon-master/crate/tests/: test_medium_priority_optimizations.rs  test_parallel_and_wasm.rs
photon-master/webpack_demo/: color-picker.html
pkg/: photon_wasm.d.ts  photon_wasm.js  photon_wasm_bg.wasm  photon_wasm_bg.wasm.d.ts
src/: brush.rs  edge_refinement.rs  image_operations.rs  lib.rs  types.rs
