[package]
name = "photon-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
photon-rs = { path = "photon-master/crate" }
base64 = "0.21"
console_error_panic_hook = "0.1"
image = { version = "0.24.8", default-features = false, features = ["png", "jpeg"] }

[profile.release]
opt-level = "z"          # 优先优化代码大小
lto = true              # 开启链接时优化
codegen-units = 1       # 单个代码生成单元以获得更好的优化效果
panic = "abort"         # 在 panic 时直接终止，减少 unwind 代码
strip = "symbols"       # 移除符号
debug = false           # 不包含调试信息
incremental = false     # 关闭增量编译

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
